Backend working with JWT and flood reports